--- a/.github/workflows/PR-analytics.yml
+++ b/.github/workflows/PR-analytics.yml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PR_TOKEN }} # In the case of a personal access token, it needs to be added to the repository's secrets and used in this field.
           GITHUB_REPO_FOR_ISSUE: 'hellocd' # Make sure to specify the name of the repository where the issue will be created
           GITHUB_OWNER_FOR_ISSUE: 'Geedee231' #  Make sure to specify the owner of the repository where the issue will be created
-          GITHUB_OWNERS_REPOS: 'Geedee231/helllocd' # Be sure to list the owner and repository name in the format owner/repo
+          GITHUB_OWNERS_REPOS: 'Geedee231/hellocd' # Be sure to list the owner and repository name in the format owner/repo
           CORE_HOURS_START: "9:00"
           CORE_HOURS_END: "19:00"
           TIMEZONE: "Africa/Lagos"
