--- a/.github/workflows/PR-analytics.yml
+++ b/.github/workflows/PR-analytics.yml
@@ -18,8 +18,8 @@ jobs:
           GITHUB_REPO_FOR_ISSUE: 'hellocd' # Make sure to specify the name of the repository where the issue will be created
           GITHUB_OWNER_FOR_ISSUE: 'Geedee231' #  Make sure to specify the owner of the repository where the issue will be created
           GITHUB_OWNERS_REPOS: 'Geedee231/hellocd' # Be sure to list the owner and repository name in the format owner/repo
-          CORE_HOURS_START: "9:00"
-          CORE_HOURS_END: "19:00"
+          #CORE_HOURS_START: "9:00"
+          #CORE_HOURS_END: "19:00"
           TIMEZONE: "Africa/Lagos"
           REPORT_DATE_START: ${{ inputs.report_date_start }}
           REPORT_DATE_END: ${{ inputs.report_date_end }}
