--- a/.github/workflows/PR-analytics.yml
+++ b/.github/workflows/PR-analytics.yml
@@ -14,16 +14,13 @@ jobs:
       - name: "Run script for analytics"
         uses: AlexSim93/pull-request-analytics-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # In the case of a personal access token, it needs to be added to the repository's secrets and used in this field.
-          GITHUB_REPO_FOR_ISSUE: 'hellocd' # Make sure to specify the name of the repository where the issue will be created
-          GITHUB_OWNER_FOR_ISSUE: 'Geedee231' #  Make sure to specify the owner of the repository where the issue will be created
-          GITHUB_OWNERS_REPOS: 'Geedee231/hellocd' # Be sure to list the owner and repository name in the format owner/repo
-          #CORE_HOURS_START: "9:00"
-          #CORE_HOURS_END: "19:00"
-          #TIMEZONE: "Africa/Lagos"
+          GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Use your custom token
+          GITHUB_REPO_FOR_ISSUE: 'hellocd'
+          GITHUB_OWNER_FOR_ISSUE: 'Geedee231'
+          GITHUB_OWNERS_REPOS: 'Geedee231/hellocd'
           REPORT_DATE_START: ${{ inputs.report_date_start }}
           REPORT_DATE_END: ${{ inputs.report_date_end }}
-    env:
-          GITHUB_API_URL: http(s)://HOSTNAME/api/v3
-          EXECUTION_OUTCOME: "markdown"
+          EXECUTION_OUTCOME: "new-issue"  # This will create an issue
+        env:
+          GITHUB_API_URL: https://api.github.com  # Correct API URL
           ALLOW_ANALYTICS: "true"
