--- a/.github/workflows/PR-analytics.yml
+++ b/.github/workflows/PR-analytics.yml
@@ -28,7 +28,7 @@ jobs:
           TOP_LIST_AMOUNT: "5"
           AGGREGATE_VALUE_METHODS: "percentile"
           PERCENTILE: "75"
-          PULL_REQUEST_STATE: "all"
+          USE_CHARTS: "true"  
         env:
           GITHUB_API_URL: https://api.github.com  # Correct API URL
           ALLOW_ANALYTICS: "true"
