--- a/.github/workflows/PR-analytics.yml
+++ b/.github/workflows/PR-analytics.yml
@@ -1,35 +1,65 @@
-name: "PR Analytics"
+name: "PR Analytics - Debug Version"
 on:
   workflow_dispatch:
     inputs:
       report_date_start:
-        description: "Report date start(d/MM/yyyy)"
+        description: "Report date start (DD/MM/YYYY)"
+        required: true
+        default: "01/07/2025"
       report_date_end:
-        description: "Report date end(d/MM/yyyy)"
+        description: "Report date end (DD/MM/YYYY)"
+        required: true
+        default: "09/07/2025"
+
 jobs:
-  create-report:
-    name: "Create report"
+  debug-prs:
+    name: "Debug PR Count"
     runs-on: ubuntu-latest
     steps:
-      - name: "Run script for analytics"
+      - name: "Check PRs manually"
+        run: |
+          echo "🔍 Checking PRs in repository..."
+          
+          # Get all PRs (both open and closed)
+          echo "📊 All PRs:"
+          curl -H "Authorization: token ${{ secrets.PR_TOKEN }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               "https://api.github.com/repos/Geedee231/hellocd/pulls?state=all&per_page=100" \
+               | jq '.[] | {number: .number, title: .title, state: .state, created_at: .created_at, updated_at: .updated_at, merged_at: .merged_at}'
+          
+          echo "📈 Total PR count:"
+          curl -H "Authorization: token ${{ secrets.PR_TOKEN }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+               "https://api.github.com/repos/Geedee231/hellocd/pulls?state=all&per_page=100" \
+               | jq '. | length'
+
+  create-report:
+    name: "Create Enhanced Report"
+    runs-on: ubuntu-latest
+    needs: debug-prs
+    steps:
+      - name: "Run analytics with enhanced settings"
         uses: AlexSim93/pull-request-analytics-action@v4
         with:
-          GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}  # Use your custom token
+          GITHUB_TOKEN: ${{ secrets.PR_TOKEN }}
           GITHUB_REPO_FOR_ISSUE: 'hellocd'
           GITHUB_OWNER_FOR_ISSUE: 'Geedee231'
           GITHUB_OWNERS_REPOS: 'Geedee231/hellocd'
-          #CORE_HOURS_START: "00:00"
-          #CORE_HOURS_END: "03:00"
-          #TIMEZONE: "Africa/Lagos"
           REPORT_DATE_START: ${{ inputs.report_date_start }}
           REPORT_DATE_END: ${{ inputs.report_date_end }}
-          EXECUTION_OUTCOME: "new-issue,markdown,collection"  
+          EXECUTION_OUTCOME: "new-issue"
+          PULL_REQUEST_STATE: "all"
+          AMOUNT_OF_PULL_REQUESTS: "200"  # Increased limit
           SHOW_STATS_TYPES: "timeline,workload,pr-quality,code-review-engagement,response-time"
-          TOP_LIST_AMOUNT: "5"
-          AGGREGATE_VALUE_METHODS: "percentile"
+          TOP_LIST_AMOUNT: "10"  # Show more items
           PERCENTILE: "75"
-          USE_CHARTS: "true"  
+          PERIOD_SPLIT_UNIT: "days"  # More granular than weeks
+          AGGREGATE_VALUE_METHODS: "percentile"
+          USE_CHARTS: "true"
+          SHOW_CORRELATION_GRAPHS: "true"
+          SHOW_ACTIVITY_TIME_GRAPHS: "true"
+          HIDE_USERS: ""  # Don't hide any users
+          INCLUDE_BOTS: "false"  # Exclude bot PRs
         env:
-          GITHUB_API_URL: https://api.github.com  # Correct API URL
+          GITHUB_API_URL: https://api.github.com
           ALLOW_ANALYTICS: "true"
-         
